[project]
name = "chatbot-app"
version = "0.1"
description = "A LLM RAG ChatBot app for Hospitals"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.115.5",
    "langchain==0.2.17",
    "langchain-openai==0.1.25",
    "langchainhub==0.1.14",
    "langchain_community==0.2.19",
    "neo4j==5.26.0",
    "numpy==1.24.4",
    "openai==1.55.0",
    "opentelemetry-api==1.28.2",
    "pydantic==2.10.1",
    "uvicorn==0.32.1"
]

[project.optional-dependencies]
dev = ["black", "flake8", "pytest"]